8222912: Websocket client doesn't work in WebView

Reviewed-by: kcr, ghb