modules/javafx.web/src/main/native/Source/WebKitLegacy/java/WebCoreSupport/FrameNetworkingContextJava.h
@@ -30,6 +30,7 @@
 #include <WebCore/FrameLoaderClient.h>
 #include <WebCore/NetworkStorageSession.h>
 #include <WebCore/Page.h>
+#include "NetworkStorageSessionMap.h"
 #include "WebPage.h"
 
 namespace WebCore {
@@ -43,7 +44,12 @@ public:
 
     NetworkStorageSession* storageSession() const override
     {
-        return nullptr;
+        ASSERT(isMainThread());
+
+        if (frame() && frame()->page() && frame()->page()->usesEphemeralSession())
+            return NetworkStorageSessionMap::storageSession(PAL::SessionID::legacyPrivateSessionID());
+
+        return &NetworkStorageSessionMap::defaultStorageSession();
     }
 
 private:
